--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -50,21 +50,21 @@
    }
 
 
-   /* About Section
+   /* Sobre Section
    ------------------------------------------------------------------- */
-   #about .profile-pic {
+   #sobre .profile-pic {
       width: 114px;
       height: 114px;
       margin-left: 12px;
    }
-   #about .contact-details { width: 50%; }
-   #about .download { width: 50%; }
+   #sobre .contact-details { width: 50%; }
+   #sobre .download { width: 50%; }
 
-   /* Resume Section
+   /* Projeto Section
    ------------------------------------------------------------------- */
-   #resume h1 { font: 25px/24px 'garamond';
+   #projeto h1 { font: 25px/24px 'garamond';
       font-weight: bold; }
-   #resume .main-col { padding-right: 5%; }   
+   #projeto .main-col { padding-right: 5%; }   
 
    /* Testimonials Section
    ------------------------------------------------------------------- */
@@ -117,7 +117,7 @@
 		height: 48px;
       margin-top: 10px;
 		text-align: left;
-		background-color: #694b0b;
+		background-color: #804000;
       transition: 0.5s;
       background-size: 200% auto;
       color: white;            
@@ -178,7 +178,7 @@
 	#nav-wrap:target > ul#nav	{
 	   display: block;
       padding: 30px 20px 48px 20px;
-      background: #694b0b88;
+      background: #80400088;
       margin: 0 30px;
       clear: both;
    }
@@ -232,27 +232,27 @@
    header .scrolldown { display: none; }
 
 
-   /* About Section
+   /* Dobre Section
    -------------------------------------------------------------------- */
-   #about .profile-pic { display: none; }
-   #about .download .button {
+   #sobre .profile-pic { display: none; }
+   #sobre .download .button {
       width: 100%;
       text-align: center;
       padding: 15px 20px;
    }
-   #about .main-col { padding-right: 30px; }
+   #sobre .main-col { padding-right: 30px; }
 
 
-   /* Resume Section
+   /* projeto Section
    --------------------------------------------------------------------- */
-   #resume .header-col {
+   #projeto .header-col {
       padding-top: 0;
       margin-bottom: 48px;
       text-align: center;
    }
-   #resume h1 { letter-spacing: 3px; }
-   #resume .main-col { padding-right: 30px; }
-   #resume h3, #resume .info { text-align: center; }
+   #projeto h1 { letter-spacing: 3px; }
+   #projeto .main-col { padding-right: 30px; }
+   #projeto h3, #projeto .info { text-align: center; }
       
    .bars { width: 100%; }
 
