--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -232,7 +232,7 @@
    header .scrolldown { display: none; }
 
 
-   /* Dobre Section
+   /* Sobre Section
    -------------------------------------------------------------------- */
    #sobre .profile-pic { display: none; }
    #sobre .download .button {
