--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -67,7 +67,7 @@ header img {
 
 header .banner-text { width: 100%; }
 header .banner-text h1 {
-   font: 90px/1.1em 'garamond';
+   font: 90px/1.1em 'Montserrat';
    font-weight: bold;
    color: #fff;
    letter-spacing: -2px;
@@ -138,7 +138,7 @@ header .scrolldown a:hover { color: #804000; }
 
 /* nav-wrap */
 #nav-wrap {
-   font: 17px 'garamond';
+   font: 17px 'Montserrat';
    font-weight: bold;
    width: 100%; 
    height: 75px;
@@ -208,7 +208,7 @@ ul#nav li.current a { color: #804000; }
 #sobre a:hover, #sobre a:focus { color: #804000; }
 
 #sobre h2 {
-   font: 30px 'garamond';
+   font: 30px 'Montserrat';
    font-weight: bold;
    color: #804000;
    margin-bottom: 12px;
@@ -216,7 +216,7 @@ ul#nav li.current a { color: #804000; }
 #sobre p {
    line-height: 30px;
    color: #fff;
-   font: 22px 'garamond';
+   font: 15px 'Montserrat';
 }
 #sobre .profile-pic {
    position: relative;
@@ -260,7 +260,7 @@ ul#nav li.current a { color: #804000; }
 
 #projeto h1 {
    color:#804000;
-   font: 25px 'garamond';
+   font: 25px 'Montserrat';
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 1px;
@@ -289,7 +289,7 @@ ul#nav li.current a { color: #804000; }
 }
 
 #projeto p {
-   font: 22px 'garamond';
+   font: 15px 'Montserrat';
    color: #804000;
 }
 #projeto .info span {
@@ -313,7 +313,7 @@ ul#nav li.current a { color: #804000; }
    padding-bottom: 60px;
 }
 #portfolio h1 {
-   font: 20px/24px 'garamond';
+   font: 27px 'Montserrat';
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 1px;
@@ -724,7 +724,7 @@ call-to-action .button {
    color: #ebeeee;
 }
 #contactos h2 {
-   font: 20px/24px 'garamond';
+   font: 27px 'Montserrat';
    font-weight: bold;
    text-transform: uppercase;
    letter-spacing: 3px;
@@ -733,13 +733,13 @@ call-to-action .button {
 }
 
 #contactos h4 {
-   font: 25px/24px 'garamond';
+   font: 27px 'Montserrat';
    font-weight: bold;
    color: #804000;
    margin-bottom: 6px;
 }
 #contactos p.lead {
-   font: 22px/24px 'garamond';
+   font: 15px 'Montserrat';
    padding-right: 3%;
 }
 #contactos .header-col { padding-top: 6px; }
@@ -748,16 +748,17 @@ call-to-action .button {
 /* contactos form */
 #contactos form { margin-bottom: 30px; }
 #contactos label {
-   font: 20px/24px 'garamond';
+   font: 18px 'Montserrat';
    font-weight: bold;
-   margin: 12px 0;
+   
+   margin: 12px ;
    color: #804000;
 	display: inline-block;
 	float: left;
    width: 26%;
 }
 #contactos p {
-   font: 20px/24px 'garamond';
+   font: 15px 'Montserrat';
   
   
 }
@@ -784,6 +785,7 @@ call-to-action .button {
 	color: #000;
 	background: #fff;
 	margin-bottom: 42px;
+   margin-left: 12px;
 	border: 0;
 	outline: none;
    font-size: 15px;
@@ -798,7 +800,7 @@ call-to-action .button {
 }
 #contactos button.submit {
 	text-transform: uppercase;
-   font: 20px 'garamond';
+   font: 25px 'Montserrat';
    font-weight: bold;
 	letter-spacing: 3px;
 	color:#fff;
