--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -763,7 +763,7 @@ call-to-action .button {
   
 }
 #contactos .preview-encomenda {
-   padding: 10px 26%;
+   padding: 10px 30%;
    margin-bottom: 42px;
    line-height: 24px;
  
@@ -800,6 +800,7 @@ call-to-action .button {
 	background-color: #804000;
 }
 #contactos button.submit {
+   margin-left: 30%;
 	text-transform: uppercase;
    font: 25px 'Montserrat';
    font-weight: bold;
